Начало нововведений. Инвентарь переписан, контекст рыбалк. Очень много рефакторинга. Тесты, мапперы рабочие.  Очень много всего, забываю менять ветки